// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateJsx - snapshots > snapshot for 'Auto Inference (Basics)' ('auto-inference') > copyable 1`] = `
"import { MicrovizChart } from "@microviz/react";

export function Chart() {
  return (
    <div
  style={{
    display: "grid",
    gridTemplateColumns: "repeat(4, 1fr)",
    gap: "1.5rem",
  }}
>
  <div className="card">
    <h2>Series → Sparkline</h2>
    <MicrovizChart
      input={{
        data: [59, 57, 62, 57, 59],
        spec: { type: "sparkline" },
        size: { width: 200, height: 32 },
      }}
    />
  </div>
  <div className="card">
    <h2>Delta → Bullet</h2>
    <MicrovizChart
      input={{
        data: { current: 33, max: 37, previous: 15 },
        spec: { type: "sparkline" },
        size: { width: 220, height: 40 },
      }}
    />
  </div>
  <div className="card">
    <h2>Segments → Donut</h2>
    <MicrovizChart
      input={{
        data: [
          { color: "#6366f1", name: "Desktop", pct: 38 },
          { color: "#22c55e", name: "Mobile", pct: 36 },
          { color: "#f59e0b", name: "Tablet", pct: 26 },
        ],
        spec: { type: "sparkline" },
        size: { width: 140, height: 140 },
      }}
    />
  </div>
  <div className="card">
    <h2>Value → Bar</h2>
    <MicrovizChart
      input={{
        data: { max: 20, value: 16 },
        spec: { type: "sparkline" },
        size: { width: 220, height: 32 },
      }}
    />
  </div>
</div>
  );
}"
`;

exports[`generateJsx - snapshots > snapshot for 'Auto Inference (Basics)' ('auto-inference') > display 1`] = `
"<div
  style={{
    display: "grid",
    gridTemplateColumns: "repeat(4, 1fr)",
    gap: "1.5rem",
  }}
>
  <div className="card">
    <h2>Series → Sparkline</h2>
    <MicrovizChart
      input={{
        data: [59, 57, 62, 57, 59],
        spec: { type: "sparkline" },
        size: { width: 200, height: 32 },
      }}
    />
  </div>
  <div className="card">
    <h2>Delta → Bullet</h2>
    <MicrovizChart
      input={{
        data: { current: 33, max: 37, previous: 15 },
        spec: { type: "sparkline" },
        size: { width: 220, height: 40 },
      }}
    />
  </div>
  <div className="card">
    <h2>Segments → Donut</h2>
    <MicrovizChart
      input={{
        data: [
          { color: "#6366f1", name: "Desktop", pct: 38 },
          { color: "#22c55e", name: "Mobile", pct: 36 },
          { color: "#f59e0b", name: "Tablet", pct: 26 },
        ],
        spec: { type: "sparkline" },
        size: { width: 140, height: 140 },
      }}
    />
  </div>
  <div className="card">
    <h2>Value → Bar</h2>
    <MicrovizChart
      input={{
        data: { max: 20, value: 16 },
        spec: { type: "sparkline" },
        size: { width: 220, height: 32 },
      }}
    />
  </div>
</div>"
`;

exports[`generateJsx - snapshots > snapshot for 'Auto Inference (CSV)' ('auto-csv') > copyable 1`] = `
"import { MicrovizChart } from "@microviz/react";

export function Chart() {
  return (
    <MicrovizChart
  input={{
    data: \`pct,color,name
35,#6366f1,Desktop
32,#22c55e,Mobile
33,#f59e0b,Tablet\`,
    spec: { type: "sparkline" },
    size: { width: 160, height: 160 },
  }}
/>
  );
}"
`;

exports[`generateJsx - snapshots > snapshot for 'Auto Inference (CSV)' ('auto-csv') > display 1`] = `
"<MicrovizChart
  input={{
    data: \`pct,color,name
35,#6366f1,Desktop
32,#22c55e,Mobile
33,#f59e0b,Tablet\`,
    spec: { type: "sparkline" },
    size: { width: 160, height: 160 },
  }}
/>"
`;

exports[`generateJsx - snapshots > snapshot for 'Auto Override' ('auto-override') > copyable 1`] = `
"import { MicrovizChart } from "@microviz/react";

export function Chart() {
  return (
    <MicrovizChart
  input={{
    data: [
      { color: "#6366f1", name: "Desktop", pct: 34 },
      { color: "#22c55e", name: "Mobile", pct: 30 },
      { color: "#f59e0b", name: "Tablet", pct: 36 },
    ],
    spec: { type: "sparkline" },
    size: { width: 240, height: 60 },
  }}
/>
  );
}"
`;

exports[`generateJsx - snapshots > snapshot for 'Auto Override' ('auto-override') > display 1`] = `
"<MicrovizChart
  input={{
    data: [
      { color: "#6366f1", name: "Desktop", pct: 34 },
      { color: "#22c55e", name: "Mobile", pct: 30 },
      { color: "#f59e0b", name: "Tablet", pct: 36 },
    ],
    spec: { type: "sparkline" },
    size: { width: 240, height: 60 },
  }}
/>"
`;

exports[`generateJsx - snapshots > snapshot for 'Bar Chart' ('bar-chart') > copyable 1`] = `
"import { Bar } from "@microviz/react";

export function Chart() {
  return (
    <Bar
  data={[64, 59, 58, 54, 49, 50, 53]}
  width={280}
  height={120}
/>
  );
}"
`;

exports[`generateJsx - snapshots > snapshot for 'Bar Chart' ('bar-chart') > display 1`] = `
"<Bar
  data={[64, 59, 58, 54, 49, 50, 53]}
  width={280}
  height={120}
/>"
`;

exports[`generateJsx - snapshots > snapshot for 'Donut Chart' ('donut') > copyable 1`] = `
"import { MicrovizChart } from "@microviz/react";

export function Chart() {
  return (
    <MicrovizChart
  input={{
    data: [
      { color: "#6366f1", name: "Desktop", pct: 27 },
      { color: "#22c55e", name: "Mobile", pct: 43 },
      { color: "#f59e0b", name: "Tablet", pct: 30 },
    ],
    spec: { type: "donut" },
    size: { width: 160, height: 160 },
  }}
/>
  );
}"
`;

exports[`generateJsx - snapshots > snapshot for 'Donut Chart' ('donut') > display 1`] = `
"<MicrovizChart
  input={{
    data: [
      { color: "#6366f1", name: "Desktop", pct: 27 },
      { color: "#22c55e", name: "Mobile", pct: 43 },
      { color: "#f59e0b", name: "Tablet", pct: 30 },
    ],
    spec: { type: "donut" },
    size: { width: 160, height: 160 },
  }}
/>"
`;

exports[`generateJsx - snapshots > snapshot for 'Interactive Chart' ('interactive') > copyable 1`] = `
"import { Sparkline } from "@microviz/react";

function handleHit(event) {
  const { hit, client } = event.detail;
  const output = document.getElementById("output");
  if (hit) {
    output.textContent = \`Hovered: \${hit.markId} at (\${Math.round(client.x)}, \${Math.round(client.y)})\`;
  } else {
    output.textContent = "Hover over the chart...";
  }
}

export function Chart() {
  return (
    <>
      <Sparkline
  data={[69, 70, 68, 67, 66, 69, 64, 62, 64, 62, 59, 57]}
  width={280}
  height={64}
  interactive
  hitSlop={8}
/>
      <div id="output">Hover over the chart...</div>
    </>
  );
}"
`;

exports[`generateJsx - snapshots > snapshot for 'Interactive Chart' ('interactive') > display 1`] = `
"<Sparkline
  data={[69, 70, 68, 67, 66, 69, 64, 62, 64, 62, 59, 57]}
  width={280}
  height={64}
  interactive
  hitSlop={8}
/>"
`;

exports[`generateJsx - snapshots > snapshot for 'Multiple Charts' ('multiple-charts') > copyable 1`] = `
"import { Bar, MicrovizChart, Sparkline } from "@microviz/react";

export function Chart() {
  return (
    <div
  style={{
    display: "grid",
    gridTemplateColumns: "repeat(3, 1fr)",
    gap: "1rem",
  }}
>
  <div className="card">
    <h2>Revenue Trend</h2>
    <Sparkline
      data={[73, 72, 73, 75, 73, 76, 75]}
      width={180}
      height={40}
    />
  </div>
  <div className="card">
    <h2>Sales by Region</h2>
    <Bar
      data={[32, 34, 35, 31]}
      width={180}
      height={80}
    />
  </div>
  <div className="card">
    <h2>Traffic Sources</h2>
    <MicrovizChart
      input={{
        data: [
          { color: "#6366f1", name: "Desktop", pct: 37 },
          { color: "#22c55e", name: "Mobile", pct: 30 },
          { color: "#f59e0b", name: "Tablet", pct: 33 },
        ],
        spec: { type: "donut" },
        size: { width: 100, height: 100 },
      }}
    />
  </div>
</div>
  );
}"
`;

exports[`generateJsx - snapshots > snapshot for 'Multiple Charts' ('multiple-charts') > display 1`] = `
"<div
  style={{
    display: "grid",
    gridTemplateColumns: "repeat(3, 1fr)",
    gap: "1rem",
  }}
>
  <div className="card">
    <h2>Revenue Trend</h2>
    <Sparkline
      data={[73, 72, 73, 75, 73, 76, 75]}
      width={180}
      height={40}
    />
  </div>
  <div className="card">
    <h2>Sales by Region</h2>
    <Bar
      data={[32, 34, 35, 31]}
      width={180}
      height={80}
    />
  </div>
  <div className="card">
    <h2>Traffic Sources</h2>
    <MicrovizChart
      input={{
        data: [
          { color: "#6366f1", name: "Desktop", pct: 37 },
          { color: "#22c55e", name: "Mobile", pct: 30 },
          { color: "#f59e0b", name: "Tablet", pct: 33 },
        ],
        spec: { type: "donut" },
        size: { width: 100, height: 100 },
      }}
    />
  </div>
</div>"
`;

exports[`generateJsx - snapshots > snapshot for 'Sparkline' ('sparkline') > copyable 1`] = `
"import { Sparkline } from "@microviz/react";

export function Chart() {
  return (
    <Sparkline
  data={[35, 38, 35, 31, 27, 24, 23, 21, 20]}
  width={200}
  height={32}
/>
  );
}"
`;

exports[`generateJsx - snapshots > snapshot for 'Sparkline' ('sparkline') > display 1`] = `
"<Sparkline
  data={[35, 38, 35, 31, 27, 24, 23, 21, 20]}
  width={200}
  height={32}
/>"
`;
